# porter

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTE.md  PULL_REQUEST_TEMPLATE.md
.github/config/: assign.yaml  laberler.yaml  yamlint.yaml
.github/workflows/: build.yaml  docs.yaml  publish.yaml  tests.yaml
app/docs_generator/: __init__.py  model_docs.py  template.md
app/src/: __init__.py
app/src/cli/: __init__.py  cli.py  state.py  utilities.py
app/src/common/: __init__.py  base_logger.py  config.py  exceptions.py
app/src/enums/: __init__.py  common.py  datasets.py  secrets.py  sources.py  targets.py
app/src/governance/: __init__.py  cli.py
app/src/governance/audit/: __init__.py
app/src/governance/data_quality/: __init__.py
app/src/governance/lineage/: __init__.py
app/src/governance/notification/: __init__.py  atlassian.py  email.py  incident_io.py  pager_duty.py  slack.py  teams.py  xmatters.py
app/src/kubernetes/: __init__.py  pod_utils.py
app/src/metadata/: __init__.py
app/src/models/: __init__.py  common.py  config.py  connection.py  connection_args.py  pipeline.py  secrets.py  source.py  target.py  transform.py  validation.py
app/src/models/dataset/: __init__.py  api.py  base.py  file.py  stream.py  table.py
app/src/sources/: __init__.py  base.py  cli.py  mapping.py
app/src/sources/api/: __init__.py
app/src/sources/api/github/: __init__.py
app/src/sources/api/jira/: __init__.py
app/src/sources/aws/: __init__.py
app/src/sources/aws/aws_athena/: __init__.py
app/src/sources/aws/aws_kinesis/: __init__.py
app/src/sources/aws/aws_s3/: __init__.py
app/src/sources/aws/aws_sqs/: __init__.py
app/src/sources/aws/dynamodb/: __init__.py
app/src/sources/aws/redshift/: __init__.py
app/src/sources/azure/: __init__.py
app/src/sources/azure/azure_blob_storage/: __init__.py
app/src/sources/database/: __init__.py  base.py  parallel_reads.py
app/src/sources/database/databricks/: __init__.py
app/src/sources/database/db2/: __init__.py
app/src/sources/database/duckdb/: __init__.py
app/src/sources/database/elasticsearch/: __init__.py
app/src/sources/database/iceberg/: __init__.py
app/src/sources/database/mongodb/: __init__.py
app/src/sources/database/mysql/: __init__.py
app/src/sources/database/oracle/: __init__.py
app/src/sources/database/postgres/: __init__.py
app/src/sources/database/snowflake/: __init__.py
app/src/sources/database/sqlite/: __init__.py
app/src/sources/database/sqlserver/: __init__.py
app/src/sources/database/teradata/: __init__.py
app/src/sources/database/vertica/: __init__.py
app/src/sources/file/: __init__.py
app/src/sources/file/dropbox/: __init__.py
app/src/sources/file/http/: __init__.py
app/src/sources/file/lan/: __init__.py
app/src/sources/file/local/: __init__.py  local_source.py
app/src/sources/file/local/engines/: __init__.py  duckdb.py  pandas.py  pyarrow.py  spark.py
app/src/sources/file/onedrive/: __init__.py
app/src/sources/file/sharepoint/: __init__.py
app/src/sources/google/: __init__.py
app/src/sources/google/bigquery/: __init__.py
app/src/sources/google/google_cloud_storage/: __init__.py
app/src/sources/google/google_drive/: __init__.py
app/src/sources/google/google_pub_sub/: __init__.py
app/src/sources/stream/: __init__.py
app/src/sources/stream/kafka/: __init__.py
app/src/transformations/: __init__.py  cli.py
app/src/utilities/: __init__.py
app/src/utilities/aws/: __init__.py  secrets.py
app/src/utilities/azure/: __init__.py  key_vault.py
app/src/utilities/common/: base_logger.py  exceptions.py
app/src/utilities/google/: __init__.py  secrets.py
app/src/validation/: __init__.py
app/tests/: __init__.py
core/src/enums/: common.py  sources.py
docs/: .readthedocs.yaml  changelog.md  core-concepts.md  local-commands.sh  local-setup.md  mkdocs.yml  requirements.txt
docs/about/: changelog.md  contribute.md
docs/configs/: mkdocs.yml
docs/models/dataset/: ApiDataset.md  FileDataset.md  TableDataset.md
example/: sample_aws_sm_secrets_backend_config.yaml
example/1_postres_to_s3/: porter_config.yaml
