[tool.poetry]
name = "porter-py"
version = "0.0.2rc0"
description = ""
homepage = "https://github.com/sh-harshavardhan/porter.git"
documentation = "https://porter-py.readthedocs.io/en/latest/"
authors = [ "ekharshavardhan851@gmail.com"]
readme = "README.md"

packages = [{ include = "src", from = "app"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings=">=2.12.0,<3.0.0"
typer = "^0.21.0"
duckdb = "^1.4.3"
pyarrow = "^22.0.0"
jinja2 = ">=3.1.6,<4.0.0"
jinjasql = "^0.1.8"
dotenv = "^0.9.9"
rich = "^14.2.0"
pyaml = "^25.7.0"
art = "^6.5"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
tabulate = "^0.9.0"
pre-commit = "^4.5.1"
openapi-core = "^0.22.0"

[tool.poetry.group.metadata.dependencies]
alembic = "^1.17.2"
sqlalchemy = "^2.0.45"

[tool.poetry.group.aws.dependencies]
boto3 = ">=1.42.19,<2.0.0"

[tool.poetry.group.govern.dependencies]
sqllineage = "^1.5.6"
openlineage-python = "^1.41.0"

[tool.poetry.group.kube.dependencies]
kubernetes = "^34.1.0"

[tool.poetry.scripts]
porter = "src.cli.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.commitizen]
version = "0.0.2rc0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
changelog_file = "docs/about/changelog.md"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["core.tests", ]
addopts = [
    "--doctest-modules",
    "--cov-failure-under=80",
    "--cov=src"
]


[tool.ruff]

fix = true
target-version = "py38"
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

include = [
    "pyproject.toml",
#    "app/**/*.py" # will disable ruff for all files in app directory once implemented
    "app/src/models/**/*.py"
]


line-length = 88
indent-width = 4


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

ignore = ["D415", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"
